<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">高校云课堂</string>

    <!--首页底部标签栏-->
    <string name="index">首页</string>
    <string name="message">公告</string>
    <string name="task">任务</string>
    <string name="contacts">更多</string>
    <string name="me">我</string>

    <string name="name">用户名:</string>
    <string name="pwd">密&#8195;码:</string>

    <string name="text_take_photo">拍照</string>
    <string name="text_from_gallery">从相册中选取</string>
    <string name="text_cancel">取消</string>
    <string name="refuse_sdcard">当前SD卡不可用</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ann">AnnActivity</string>
    <string name="title_activity_task_show">TaskShowActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_task_manage">TaskManageActivity</string>
    <string name="title_activity_attend_manage">AttendManage</string>
    <string name="title_activity_attend_detail">AttendDetailActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_ann_manage">AnnManageActivity</string>
    <string name="title_activity_new_ann">NewAnnActivity</string>
    <string name="title_activity_task_mana">TaskManaActivity</string>
    <string name="title_activity_attend_mana">AttendManaActivity</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="title_activity_new_attend">NewAttendActivity</string>


</resources>
