<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/bottom_bg">

        <RadioButton
            android:id="@+id/index"
            style="@style/BottomRadioButton"
            android:text="@string/index"
            android:drawableTop="@drawable/bottom_radiobtn_index_icon_select"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/message"
            style="@style/BottomRadioButton"
            android:text="@string/message"
            android:drawableTop="@drawable/bottom_radiobtn_mes_icon_select"/>

        <RadioButton
            android:id="@+id/task"
            style="@style/BottomRadioButton"
            android:text="@string/task"
            android:drawableTop="@drawable/bottom_radiobtn_task_icon_select"/>

        <RadioButton
            android:id="@+id/more"
            style="@style/BottomRadioButton"
            android:text="@string/contacts"
            android:drawableTop="@drawable/bottom_radiobtn_more_icon_select"/>

        <RadioButton
            android:id="@+id/me"
            style="@style/BottomRadioButton"
            android:text="@string/me"
            android:drawableTop="@drawable/bottom_radiobtn_me_icon_select"/>
    </RadioGroup>

</RelativeLayout>